--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^12.7.0",
     "next": "15.3.0",
     "postcss": "^8.5.3",
     "react": "^19.0.0",
