refactor: remove backend dependencies and authentication

--- a/package.json
+++ b/package.json
@@ -6,25 +6,20 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "auth:generate": "better-auth generate",
-    "auth:migrate": "better-auth migrate"
+    "lint": "next lint"
   },
   "dependencies": {
-    "@better-auth/root": "github:better-auth/better-auth",
     "@progress/kendo-file-saver": "^1.1.2",
     "@radix-ui/react-checkbox": "^1.2.3",
     "@radix-ui/react-label": "^2.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "axios": "^1.8.4",
-    "better-auth": "^1.2.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^12.7.0",
     "lucide-react": "^0.488.0",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
-    "pg": "^8.15.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
@@ -37,12 +32,10 @@
     "@babel/core": "^7.27.1",
     "@babel/preset-env": "^7.27.1",
     "@babel/preset-typescript": "^7.27.1",
-    "@better-auth/cli": "^1.2.7",
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4.1.4",
     "@types/axios": "^0.9.36",
     "@types/node": "^20",
-    "@types/pg": "^8.11.14",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "autoprefixer": "^10.4.21",
